--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
     <!-- Make the page mobile compatible -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" href="/favicon.ico" />
-    <title>React-Redux Boilerplate</title>
+    <title>Mirum Interview Project</title>
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
